--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ theme: jekyll-theme-minimal
 sass:
     style: expanded  # nested|expanded|compact|compressed
     deploy_style: compressed  # nested|expanded|compact|compressed
+    # style: compressed
     compile_in_place: true
     load_paths:
         - assets
