--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,9 @@ theme: jekyll-theme-minimal
 sass:
     style: expanded  # nested|expanded|compact|compressed
     deploy_style: compressed  # nested|expanded|compact|compressed
-    # style: compressed
-    compile_in_place: true
+    compile_in_place: true  # true|false
+        # If true, compiles sass directly into your jekyll source directory
+        # As well as your destination directory
     load_paths:
         - assets
         - assets/v2/basics
