Allowed SCSS lint to work with Jekyll front matter
Requires `gsed`. On Linux, make sure that points to `sed`. On macOS, use `brew install gnu-sed`

--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -1,5 +1,6 @@
 # https://github.com/brigade/scss-lint/blob/master/lib/scss_lint/linter/README.md
 
+preprocess_command: "gsed '1{/^---$/{:a N;/---$/!ba;d}}'"
 linters:
     BorderZero:
         convention: none
