--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -4,6 +4,8 @@ preprocess_command: "gsed '1{/^---$/{:a N;/---$/!ba;d}}'"
 linters:
     BorderZero:
         convention: none
+    Comment:
+        allowed: '^/\*\*'
     PropertySortOrder:
         order: smacss
         ignore_unspecified: true
