--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "assets/v2/3p/css-vars"]
 	path = assets/v2/3p/css-vars
 	url = https://github.com/BlueHuskyStudios/css-vars.git
+[submodule "assets/v2/3p/Font-Awesome"]
+	path = assets/v2/3p/Font-Awesome
+	url = https://github.com/FortAwesome/Font-Awesome.git
