Added styles for figure cards
* This is basically the same as the portfolio cards at https://Resume.BenLeggiero.me/Portfolio
* Also, introduced a pattern of sub-folders inside the Neon theme folder

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ sass:
         - assets/v2/structure
         - assets/v2/material
         - assets/v2/neon
+        - assets/v2/neon/elements
         - assets/v2/3p/css-vars
         - assets/v2/3p/Font-Awesome/scss
     sass_dir: assets
