--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ---
 title: Blue Husky Stylesheets
-email: BenLeggiero@Gmail.com
+email: KyLeggiero@Gmail.com
 description: >- # this means to ignore newlines until the next property
   A bunch of stylesheets that power Blue Husky products
 theme: jekyll-theme-minimal
@@ -21,5 +21,5 @@ sass:
         - assets/v2/3p/css-vars
         - assets/v2/3p/Font-Awesome/scss
     sass_dir: assets
-twitter_username: BenLeggiero
-github_username: BenLeggiero
+twitter_username: KyLeggiero
+github_username: KyLeggiero
